# calc-stands-for-calculator

./: .gitignore  Cargo.toml  README.md  package-lock.json
src/: calc.rs  error.rs  main.rs  templates.rs
templates/: index.html  test.html
templates/components/: calc_buttons.html  screen.html
